<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AgingMonkeyTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="app_name_monkey">Monkey</string>
    <string name="app_name_factory">Factory</string>
    <string name="reset">Reset</string>
    <string name="tips">Help</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_home_description_format">%1$s, %2$s</string>
    <string name="abc_action_bar_home_subtitle_description_format">%1$s, %2$s, %3$s</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="audio_name">Playing :</string>
    <string name="auto_run_complete_string_format">TestType:    %1$d</string>
    <string name="double_back_exit">Double click back key to exit!!!</string>
    <string name="exit">Exit</string>
    <string name="hint_reboot_settings">Reboot times</string>
    <string name="menu_auto">Auto</string>
    <string name="menu_manually">Manually</string>
    <string name="menu_settings">Settings</string>
    <string name="monkey_complete_string_format">"TestStart:  %1$s 
        
TestEnd:  %2$s 

TestRun:  %3$s 

TestDuration:  %4$s 

TestExceptedToEnd:  %5$s 

TestEndByPower:  %6$s 

"</string>
    <string name="monkey_start_string_format">Test Start at Up time: %1$d days : %2$d hours : %3$d minutes : %4$d seconds</string>
    <string name="output_all">Output All</string>
    <string name="output_microphone">Microphone Output</string>
    <string name="output_speaker">Speaker Output</string>
    <string name="radiobutton_duration">Duration</string>
    <string name="radiobutton_time">Times</string>
    <string name="reboot_settings">Reboot</string>
    <string name="reboot_settings_need">Test with reboot</string>
    <string name="reboot_settings_no_need">No need reboot</string>
    <string name="reset_confirm_message">This will erase all data, are you sure to reset the device?</string>
    <string name="result_false">False</string>
    <string name="result_pass">TestResult:    Pass</string>
    <string name="result_true">True</string>
    <string name="search_menu_title">Search</string>
    <string name="start">Start</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="stop">Stop</string>
    <string name="test_name_audio">Audio</string>
    <string name="test_name_battery">Battery</string>
    <string name="test_name_bluetooth">Bluetooth</string>
    <string name="test_name_camera_focus_motor">FocusMotor</string>
    <string name="test_name_camera_main">RearCameraPreview</string>
    <string name="test_name_camera_preview">Preview</string>
    <string name="test_name_camera_sub">FrontCameraPreview</string>
    <string name="test_name_camera_take_picture">Picture</string>
    <string name="test_name_flashlight">Flashlight</string>
    <string name="test_name_lcd">LCD</string>
    <string name="test_name_sound_record">SoundRecord</string>
    <string name="test_name_video_main">RearCameraVideo</string>
    <string name="test_name_video_sub">FrontCameraVideo</string>
    <string name="test_name_wifi">Wi-Fi</string>
    <string name="test_times">Test Times:</string>
    <string name="text_bluetooth_off">Bluetooth Off</string>
    <string name="text_bluetooth_on">Bluetooth On</string>
    <string name="text_flashlight_off">Flashlight Off</string>
    <string name="text_flashlight_on">Flashlight On</string>
    <string name="text_soundrecord_off">SoundRecord Off, then play...</string>
    <string name="text_soundrecord_on">SoundRecord On</string>
    <string name="text_wifi_off">WiFi Off</string>
    <string name="text_wifi_on">WiFi On</string>
    <string name="time_choose_label">Value</string>
    <string name="time_choose_title">Choose a time value</string>
    <string name="time_default_day">3</string>
    <string name="time_default_hour">0</string>
    <string name="time_default_minute">0</string>
    <string name="time_default_second">0</string>
    <string name="time_label_day">Day</string>
    <string name="time_label_hour">Hour</string>
    <string name="time_label_minute">Min</string>
    <string name="time_label_second">Sec</string>
    <string name="time_string_format">%1$d days, %2$d hours, %3$d minutes, %4$d seconds</string>
    <string name="times_input">Input test times</string>
    <string name="title_reboot_settings">Reboot Settings</string>
    <string name="title_test_item_settings">Select items for test</string>
    <string name="Flash_main_Off">Flash Main Off</string>
    <string name="Flash_Sub_Off">Flash Sub Off</string>
    <string name="afi_code">afi_code:</string>
    <string name="reboot_test">Reboot Test</string>
    <string name="AutoReboot">AutoReboot</string>
    <string name="reboot_app_name">RebootActivity</string>
    <string name="reboot_num_label">Set reboot num: </string>
    <string name="reboot_account">Remaining num: </string>
    <string name="reboot_warning">please set the reboot num !</string>
    <string name="reboot_button">Reboot</string>
    <string name="stop_button">Stop</string>
    <string name="exist_root_fun">IsExistRootFun</string>
    
</resources>
