<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal"
        >
        <TextView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reboot_num_label"
            android:textSize="20sp"
            />

        <EditText
            android:id="@+id/NumReboot"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:inputType="number"
            android:maxLength="5"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:paddingTop="20dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reboot_account"
            android:textSize="20sp"
            />

        <TextView
            android:id="@+id/RebootAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <Button
            android:id="@+id/RebootButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/reboot_button"
            android:textSize="20sp"
            />
        <Button
            android:id="@+id/StopButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/stop_button"
            android:textSize="20sp"
            />
    </LinearLayout>
</LinearLayout>


