<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    android:id="@+id/activity_factory_entry" 
    android:paddingLeft="@dimen/activity_horizontal_margin" 
    android:paddingTop="@dimen/activity_vertical_margin" 
    android:paddingRight="@dimen/activity_horizontal_margin" 
    android:paddingBottom="@dimen/activity_vertical_margin" 
    android:layout_width="fill_parent" 
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ListView
        android:id="@+id/list_recycler" 
        android:visibility="gone" 
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        >
    </ListView>

    <LinearLayout
        android:id="@+id/layout_auto"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/radio_group"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="4.0dip">

            <RadioButton
                android:id="@+id/radiobutton_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8.0dip"
                android:checked="true"
                android:text="@string/radiobutton_time" />

            <RadioButton
                android:id="@+id/radiobutton_duration"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_margin="8.0dip"
                android:text="@string/radiobutton_duration" />
        </RadioGroup>

        <FrameLayout
            android:id="@+id/container_parent"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">

            <FrameLayout
                android:id="@+id/container"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />
        </FrameLayout>

        <EditText
            android:id="@+id/time_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/test_times"
            android:inputType="numberSigned" />

        <!--TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="31dp"
            android:visibility="invisible" /-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:orientation="horizontal">

        <Button
            android:id="@+id/btn_settings"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/menu_settings" />
        <!-- Button
            android:id="@+id/btn_reboot"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/reboot_settings" /-->
        </LinearLayout>
       
        <Button
            android:id="@+id/auto_start"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/start" />
    </LinearLayout>
</LinearLayout>
